Bug 480366 - Hovering between different application folders in the application launcher is laggy
Summary: Hovering between different application folders in the application launcher is...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-26 15:37 UTC by John Dykes
Modified: 2024-02-03 17:07 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
video of the delayed category change behaviour (2.22 MB, video/webm)
2024-01-26 15:37 UTC, John Dykes
Details
Selector stuck doesnt follow mouse cursor (46.02 KB, image/png)
2024-02-03 14:51 UTC, Axel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Dykes 2024-01-26 15:37:40 UTC
Created attachment 165251 [details]
video of the delayed category change behaviour

SUMMARY
When switch between the different application categories in the application launcher, instead of changing instantly there is some lag. When i move my mouse rapidly between the different categories the delay gets worse and ultimately the computer becomes unresponsive for some time.


STEPS TO REPRODUCE
1. Open the application menu
2. Quickly hover on different application categories

OBSERVED RESULT
The application category change is delayed.

EXPECTED RESULT
The application category changes quickly without any lag

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 39
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 5.249.0
Qt Version: 6.6.0
Kernel Version: 6.6.13-200.fc39.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15.5 GiB of RAM
Graphics Processor: AMD Radeon RX 6750 XT

ADDITIONAL INFORMATION
Comment 1 Nicolas Fella 2024-01-26 15:43:01 UTC
This sounds like https://bugs.kde.org/show_bug.cgi?id=477138
Comment 2 Nicolas Fella 2024-01-28 00:13:07 UTC
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3564 should help
Comment 3 Nicolas Fella 2024-01-29 20:36:40 UTC
Git commit 236587082f6562314d5569ab91bcc63905621552 by Nicolas Fella.
Committed on 29/01/2024 at 20:14.
Pushed by nicolasfella into branch 'master'.

[applets/kicker] Pass applications: URL to task manager for launcher check

Currently we pass the full url to the desktop file, which the receiving side then converts to an applications: URL (in TaskTools::launcherUrlsMatch), which is expensive

Instead pass directly such a URL, making the comparison in launcherUrlsMatch much cheaper

M  +3    -3    applets/kicker/plugin/actionlist.cpp
M  +8    -5    applets/kicker/plugin/containmentinterface.cpp
M  +4    -2    applets/kicker/plugin/containmentinterface.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/236587082f6562314d5569ab91bcc63905621552
Comment 4 Nicolas Fella 2024-01-30 00:47:27 UTC
Git commit fde97efb87619c5802190b2833b0fdbbf8c42ee3 by Nicolas Fella.
Committed on 30/01/2024 at 00:47.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[applets/kicker] Pass applications: URL to task manager for launcher check

Currently we pass the full url to the desktop file, which the receiving side then converts to an applications: URL (in TaskTools::launcherUrlsMatch), which is expensive

Instead pass directly such a URL, making the comparison in launcherUrlsMatch much cheaper
(cherry picked from commit 236587082f6562314d5569ab91bcc63905621552)

M  +3    -3    applets/kicker/plugin/actionlist.cpp
M  +8    -5    applets/kicker/plugin/containmentinterface.cpp
M  +4    -2    applets/kicker/plugin/containmentinterface.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/fde97efb87619c5802190b2833b0fdbbf8c42ee3
Comment 5 Axel 2024-02-03 14:51:55 UTC
Created attachment 165497 [details]
Selector stuck doesnt follow mouse cursor

2 February 2024. Ive seen this bug previously, however what I had seen was a variation of this. 

Moving the mouse cursor on the right part works flawlessly, but in the application folders sometimes the selection gets stuck on the last folder and doesnt follow the mouse cursor. Also there is still a noticeable delay though less severe than the one appearing in the first post.

Picture of the bug taken today. if mouse cursor unmoved the selector remains stuck there indefinitely
Comment 6 Axel 2024-02-03 14:53:38 UTC
Forgot to mention on the last unstable Neon version. Updated system before testing the bug and the picture
Comment 7 Nate Graham 2024-02-03 17:07:48 UTC
It's very likely that what you're seeing is caused by the triangle mouse filter that's used to avoid annoyingly switching categories when you don't want to. Regardless, even if it's not, that's a different issue from what was described here.