[applets/kicker] Pass applications: URL to task manager for launcher check

Currently we pass the full url to the desktop file, which the receiving side then converts to an applications: URL (in TaskTools::launcherUrlsMatch), which is expensive

Instead pass directly such a URL, making the comparison in launcherUrlsMatch much cheaper

BUG: 480366